welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but ']' found.
    if(nums[]==lookingFor){
            ^indexOfValue:6: error: ']' expected but '}' found.
  }
  ^